Fixed Overflow on Small Screens

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 .info-div {
-	height: 20rem;
+	height: auto;
 	width: 100%;
 	box-shadow: 2rem 2rem 2rem 1rem;
 }
